fixed alignment again on p tags

--- a/sass/gutenberg/blocks/_core-group.scss
+++ b/sass/gutenberg/blocks/_core-group.scss
@@ -1,7 +1,11 @@
 .site-main > .wp-block-group .wp-block-group__inner-container > p{
-    max-width: calc($width-wide + var(--padding-container-horizontal) * 2);
+    max-width: $width-wide;
     margin-left: auto;
     margin-right: auto;
     padding-left: var(--padding-container-horizontal);
     padding-right: var(--padding-container-horizontal);
+    @media(min-width: calc( $width-wide + 40px)){
+      padding-left: 0px;
+      padding-right: 0px
+    }
 }
